--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -6,7 +6,7 @@
 
 body {
     height: 100vh;
-    background-color:white;
+    background-color:rgb(245, 255, 255);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -19,11 +19,44 @@ body {
 }
 
 .wrapper {
-    background-color:antiquewhite;
+    background-color:rgb(216, 216, 216);
     width: 20rem;
     padding: 2rem;
     margin-top: 4rem;
     border-radius: 1rem;
-    box-shadow: -20px 20px 9px -5px rgba(0,0,0,0.1);
+    box-shadow: -20px 20px 9px -5px rgba(0,0,0,0.2);
+}
+
+.buttonBox {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 0.5rem;
+}
+
+.button {
+    background-color: rgba(217, 249, 255, 0.616);
+    height: 3.5rem;
+    padding: 10px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    color: black; 
+    border: none;
+    font-size: 1.5rem;
 }
   
+.button:hover {
+    border: 2px dashed lightblue;
+}
+
+.equals {
+    background-color: #4bd086;
+    grid-column: 3/5;
+}
+
+.opt {
+    background: #f79505;
+}
+
